--- a/index.html
+++ b/index.html
@@ -871,7 +871,7 @@
   <div class="popup-overlay" id="hotSalePopup">
     <div class="popup-container">
       <button class="close-popup" id="closePopup">&times;</button>
-      <img src="promocion-dorada.jpg" alt="Promoción Exclusiva - Diseño de Sonrisa 30% OFF" class="popup-img">
+      <img src="Oferta.png" alt="Promoción Exclusiva - Diseño de Sonrisa 30% OFF" class="popup-img">
     </div>
   </div>
 
