--- a/index.html
+++ b/index.html
@@ -946,8 +946,8 @@
   <section id="galeria">
     <h2 class="section-title reveal fade-bottom" data-i18n="galleryTitle">Nuestros Resultados</h2>
     <div class="galeria-ads">
-      <img src="antes-despues-1.jpg" alt="Transformación de sonrisa con carillas" class="reveal fade-left">
-      <img src="instalaciones-premium.jpg" alt="Clínica de lujo en Juárez" class="reveal fade-right">
+      <img src="El3.jpg" alt="Transformación de sonrisa con carillas" class="reveal fade-left">
+      <img src="El2.jpg" alt="Clínica de lujo en Juárez" class="reveal fade-right">
     </div>
   </section>
 
