--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Smile Design Juárez | Excelencia en Odontología Estética</title>
+  <title>Erick Robles Odontologia Integral |  Especialidades Odontologicas</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
@@ -876,7 +876,7 @@
   </div>
 
   <header class="header" id="mainHeader">
-    <img src="logo-smile-design.png" alt="Smile Design Juárez" class="logo">
+    <img src="logo.png" alt="Erick Robles Odontologia integral" class="logo">
     <div class="direccion-header">
       <i class="fas fa-map-marker-alt"></i> Av. Plutarco Elías Calles 315, Cd. Juárez
     </div>
