--- a/index.html
+++ b/index.html
@@ -944,7 +944,7 @@
 
   <!-- Galería -->
   <section id="galeria">
-    <h2 class="section-title reveal fade-bottom" data-i18n="galleryTitle">Nuestros Resultados</h2>
+    <h2 class="section-title reveal fade-bottom" data-i18n="galleryTitle">Conocenos</h2>
     <div class="galeria-ads">
       <img src="El3.jpg" alt="Transformación de sonrisa con carillas" class="reveal fade-left">
       <img src="El2.jpg" alt="Clínica de lujo en Juárez" class="reveal fade-right">
@@ -1148,7 +1148,7 @@
         "service6Desc": "Reparamos tus dientes con materiales que imitan el esmalte natural.",
         "service7": "Rejuvenecimiento Facial",
         "service7Desc": "Tratamientos combinados para armonizar sonrisa y rostro.",
-        "galleryTitle": "Nuestros Resultados",
+        "galleryTitle": "Conocenos",
         "formTitle": "Consulta Personalizada",
         "nameLabel": "Nombre completo",
         "namePlaceholder": "Ingresa tu nombre completo",
