--- a/index.html
+++ b/index.html
@@ -957,8 +957,8 @@
       <h2 class="form-title" data-i18n="formTitle">Consulta Personalizada</h2>
       <form id="appointmentForm" action="https://formsubmit.co/erickrobles5821@gmail.com" method="POST">
         <!-- Campos ocultos para FormSubmit -->
-        <input type="hidden" name="_subject" value="Nueva solicitud de cita - Smile Design">
-        <input type="hidden" name="_next" value="https://smiledesignjuarez.github.io/confirmacion.html">
+        <input type="hidden" name="_subject" value="Nueva solicitud de cita - Erick Robles Odontologia Integral">
+        <input type="hidden" name="_next" value="https:/ErickRoblesOdontologiaIntegral.github.io/confirmacion.html">
         <input type="hidden" name="_captcha" value="false">
         <input type="hidden" name="_template" value="table">
         
@@ -1054,12 +1054,12 @@
   <section id="ubicacion">
     <h2 class="section-title reveal fade-bottom" data-i18n="locationTitle">Nuestra Clínica</h2>
     <div class="mapa-container reveal fade-bottom">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3483.622763784383!2d-106.4343879241366!3d31.4819999754399!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86e8d9c9b9e8c9b9%3A0x9e8c9b9e8c9b9e8c!2sAv.%20Plutarco%20El%C3%ADas%20Calles%20315%2C%20Ciudad%20Ju%C3%A1rez%2C%20Chih.!5e0!3m2!1sen!2smx!4v1620000000000!5m2!1sen!2smx" class="mapa" allowfullscreen="" loading="lazy" title="Ubicación de Smile Design Juárez"></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3483.622763784383!2d-106.4343879241366!3d31.4819999754399!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86e8d9c9b9e8c9b9%3A0x9e8c9b9e8c9b9e8c!2sAv.%20Plutarco%20El%C3%ADas%20Calles%20315%2C%20Ciudad%20Ju%C3%A1rez%2C%20Chih.!5e0!3m2!1sen!2smx!4v1620000000000!5m2!1sen!2smx" class="mapa" allowfullscreen="" loading="lazy" title="Ubicación de Erick Robles Odontologia Integral"></iframe>
     </div>
   </section>
 
   <footer class="footer">
-    <p><strong>Smile Design Juárez</strong></p>
+    <p><strong>Erick Robles Odontologia Integral</strong></p>
     <p><i class="fas fa-map-marker-alt"></i> Av. Plutarco Elías Calles 315, Ciudad Juárez, Chihuahua</p>
     <p><i class="fas fa-clock"></i> <span data-i18n="hours">Horario</span>: Lunes a Viernes 9:00 AM - 6:00 PM | Sábados 9:00 AM - 2:00 PM</p>
     <p><i class="fas fa-phone"></i> Tel: (614) 708-0165 | WhatsApp: +52 1 614-708-0165</p>
@@ -1127,7 +1127,7 @@
     // Traducciones completas
     const translations = {
       es: {
-        "title": "Smile Design Juárez | Excelencia en Odontología Estética",
+        "title": "Erick Robles Odontologia Integral | Excelencia en Odontología Estética",
         "heroTitle": "Excelencia en Odontología Estética",
         "heroText": "Transformamos sonrisas con técnicas avanzadas y un enfoque personalizado en Juárez.",
         "contactBtn": "Reserva tu consulta",
@@ -1194,7 +1194,7 @@
         "hours": "Horario"
       },
       en: {
-        "title": "Smile Design Juarez | Excellence in Aesthetic Dentistry",
+        "title": "Erick Robles Odontologia Integral | Excellence in Aesthetic Dentistry",
         "heroTitle": "Excellence in Aesthetic Dentistry",
         "heroText": "We transform smiles with advanced techniques and a personalized approach in Juarez.",
         "contactBtn": "Book your consultation",
