--- a/index.html
+++ b/index.html
@@ -928,16 +928,16 @@
         <p data-i18n="service4Desc">Máxima estética y resistencia para restaurar tus dientes.</p>
       </div>
       <div class="servicio-item reveal fade-bottom">
-        <h3><i class="fas fa-teeth"></i> <span data-i18n="service5">Ortodoncia Invisible</span></h3>
-        <p data-i18n="service5Desc">Alinea tus dientes discretamente con alineadores transparentes.</p>
-      </div>
-      <div class="servicio-item reveal fade-bottom">
         <h3><i class="fas fa-tooth"></i> <span data-i18n="service6">Restauraciones Estéticas</span></h3>
         <p data-i18n="service6Desc">Reparamos tus dientes con materiales que imitan el esmalte natural.</p>
       </div>
       <div class="servicio-item reveal fade-bottom">
-        <h3><i class="fas fa-smile"></i> <span data-i18n="service7">Rejuvenecimiento Facial</span></h3>
-        <p data-i18n="service7Desc">Tratamientos combinados para armonizar sonrisa y rostro.</p>
+        <h3><i class="fas fa-smile"></i> <span data-i18n="service7">Rellenos dentales</span></h3>
+        <p data-i18n="service7Desc">Tratamientos que usan resinas para dar una estetica a tus dientes y conservando estructura dental solo retirando caries.</p>
+      </div>
+       <div class="servicio-item reveal fade-bottom">
+        <h3><i class="fas fa-tooth"></i> <span data-i18n="service6">Limpiezas dentales</span></h3>
+        <p data-i18n="service6Desc">Retiramos el sarro y mal aliento de tu boca, ademas de darles un color mas bello a tus dientes.</p>
       </div>
     </div>
   </section>
@@ -977,7 +977,9 @@
             <option value="Coronas" data-i18n="option4">Coronas de Zirconio</option>
             <option value="Ortodoncia" data-i18n="option5">Ortodoncia Invisible</option>
             <option value="Restauraciones" data-i18n="option6">Restauraciones Estéticas</option>
-            <option value="Rejuvenecimiento" data-i18n="option7">Rejuvenecimiento Facial</option>
+            <option value="Rellenos" data-i18n="option7">Relleno de muela </option>
+            <option value="Limpieza" data-i18n="option7">Limpieza</option>
+            <option value="Extraccion" data-i18n="option7">Extraccion</option>
             <option value="Otro" data-i18n="option8">Otro</option>
           </select>
         </div>
@@ -1146,7 +1148,6 @@
         "service5Desc": "Alinea tus dientes discretamente con alineadores transparentes.",
         "service6": "Restauraciones Estéticas",
         "service6Desc": "Reparamos tus dientes con materiales que imitan el esmalte natural.",
-        "service7": "Rejuvenecimiento Facial",
         "service7Desc": "Tratamientos combinados para armonizar sonrisa y rostro.",
         "galleryTitle": "Conocenos",
         "formTitle": "Consulta Personalizada",
@@ -1159,8 +1160,7 @@
         "option3": "Blanqueamiento Profesional",
         "option4": "Coronas de Zirconio",
         "option5": "Ortodoncia Invisible",
-        "option6": "Restauraciones Estéticas",
-        "option7": "Rejuvenecimiento Facial",
+        "option6": "Restauraciones Estéticas"
         "option8": "Otro",
         "dayLabel": "Día preferido para consulta",
         "selectDay": "Selecciona un día",
