--- a/index.html
+++ b/index.html
@@ -928,16 +928,16 @@
         <p data-i18n="service4Desc">Máxima estética y resistencia para restaurar tus dientes.</p>
       </div>
       <div class="servicio-item reveal fade-bottom">
+        <h3><i class="fas fa-teeth"></i> <span data-i18n="service5">Ortodoncia Invisible</span></h3>
+        <p data-i18n="service5Desc">Alinea tus dientes discretamente con alineadores transparentes.</p>
+      </div>
+      <div class="servicio-item reveal fade-bottom">
         <h3><i class="fas fa-tooth"></i> <span data-i18n="service6">Restauraciones Estéticas</span></h3>
         <p data-i18n="service6Desc">Reparamos tus dientes con materiales que imitan el esmalte natural.</p>
       </div>
       <div class="servicio-item reveal fade-bottom">
-        <h3><i class="fas fa-smile"></i> <span data-i18n="service7">Rellenos dentales</span></h3>
-        <p data-i18n="service7Desc">Tratamientos que usan resinas para dar una estetica a tus dientes y conservando estructura dental solo retirando caries.</p>
-      </div>
-       <div class="servicio-item reveal fade-bottom">
-        <h3><i class="fas fa-tooth"></i> <span data-i18n="service6">Limpiezas dentales</span></h3>
-        <p data-i18n="service6Desc">Retiramos el sarro y mal aliento de tu boca, ademas de darles un color mas bello a tus dientes.</p>
+        <h3><i class="fas fa-smile"></i> <span data-i18n="service7">Rejuvenecimiento Facial</span></h3>
+        <p data-i18n="service7Desc">Tratamientos combinados para armonizar sonrisa y rostro.</p>
       </div>
     </div>
   </section>
@@ -958,7 +958,7 @@
       <form id="appointmentForm" action="https://formsubmit.co/erickrobles5821@gmail.com" method="POST">
         <!-- Campos ocultos para FormSubmit -->
         <input type="hidden" name="_subject" value="Nueva solicitud de cita - Erick Robles Odontologia Integral">
-        <input type="hidden" name="_next" value="https:/ErickRoblesOdontologiaIntegral.github.io/confirmacion.html">
+        <input type="hidden" name="_next" value="https://smiledesignjuarez.github.io/confirmacion.html">
         <input type="hidden" name="_captcha" value="false">
         <input type="hidden" name="_template" value="table">
         
@@ -977,9 +977,7 @@
             <option value="Coronas" data-i18n="option4">Coronas de Zirconio</option>
             <option value="Ortodoncia" data-i18n="option5">Ortodoncia Invisible</option>
             <option value="Restauraciones" data-i18n="option6">Restauraciones Estéticas</option>
-            <option value="Rellenos" data-i18n="option7">Relleno de muela </option>
-            <option value="Limpieza" data-i18n="option7">Limpieza</option>
-            <option value="Extraccion" data-i18n="option7">Extraccion</option>
+            <option value="Rejuvenecimiento" data-i18n="option7">Rejuvenecimiento Facial</option>
             <option value="Otro" data-i18n="option8">Otro</option>
           </select>
         </div>
@@ -1056,7 +1054,7 @@
   <section id="ubicacion">
     <h2 class="section-title reveal fade-bottom" data-i18n="locationTitle">Nuestra Clínica</h2>
     <div class="mapa-container reveal fade-bottom">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3483.622763784383!2d-106.4343879241366!3d31.4819999754399!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86e8d9c9b9e8c9b9%3A0x9e8c9b9e8c9b9e8c!2sAv.%20Plutarco%20El%C3%ADas%20Calles%20315%2C%20Ciudad%20Ju%C3%A1rez%2C%20Chih.!5e0!3m2!1sen!2smx!4v1620000000000!5m2!1sen!2smx" class="mapa" allowfullscreen="" loading="lazy" title="Ubicación de Erick Robles Odontologia Integral"></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3483.622763784383!2d-106.4343879241366!3d31.4819999754399!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86e8d9c9b9e8c9b9%3A0x9e8c9b9e8c9b9e8c!2sAv.%20Plutarco%20El%C3%ADas%20Calles%20315%2C%20Ciudad%20Ju%C3%A1rez%2C%20Chih.!5e0!3m2!1sen!2smx!4v1620000000000!5m2!1sen!2smx" class="mapa" allowfullscreen="" loading="lazy" title="Ubicación deErick Robles Odontologia Integral"></iframe>
     </div>
   </section>
 
@@ -1148,6 +1146,7 @@
         "service5Desc": "Alinea tus dientes discretamente con alineadores transparentes.",
         "service6": "Restauraciones Estéticas",
         "service6Desc": "Reparamos tus dientes con materiales que imitan el esmalte natural.",
+        "service7": "Rejuvenecimiento Facial",
         "service7Desc": "Tratamientos combinados para armonizar sonrisa y rostro.",
         "galleryTitle": "Conocenos",
         "formTitle": "Consulta Personalizada",
@@ -1160,7 +1159,8 @@
         "option3": "Blanqueamiento Profesional",
         "option4": "Coronas de Zirconio",
         "option5": "Ortodoncia Invisible",
-        "option6": "Restauraciones Estéticas"
+        "option6": "Restauraciones Estéticas",
+        "option7": "Rejuvenecimiento Facial",
         "option8": "Otro",
         "dayLabel": "Día preferido para consulta",
         "selectDay": "Selecciona un día",
