--- a/index.html
+++ b/index.html
@@ -908,40 +908,55 @@
     </div>
   </section>
 
-  <section id="servicios">
-    <h2 class="section-title reveal fade-bottom" data-i18n="servicesTitle">Servicios Premium</h2>
-    <div class="servicios-grid">
-      <div class="servicio-item reveal fade-bottom">
-        <h3><i class="fas fa-sparkles"></i> <span data-i18n="service1">Diseño de Sonrisa Digital</span></h3>
-        <p data-i18n="service1Desc">Visualiza tu nueva sonrisa antes del tratamiento con nuestra tecnología 3D.</p>
-      </div>
-      <div class="servicio-item reveal fade-bottom">
-        <h3><i class="fas fa-gem"></i> <span data-i18n="service2">Carillas de Porcelana</span></h3>
-        <p data-i18n="service2Desc">La solución más natural y duradera para una sonrisa perfecta.</p>
-      </div>
-      <div class="servicio-item reveal fade-bottom">
-        <h3><i class="fas fa-snowflake"></i> <span data-i18n="service3">Blanqueamiento Profesional</span></h3>
-        <p data-i18n="service3Desc">Resultados inmediatos con nuestro sistema láser de última generación.</p>
-      </div>
-      <div class="servicio-item reveal fade-bottom">
-        <h3><i class="fas fa-crown"></i> <span data-i18n="service4">Coronas de Zirconio</span></h3>
-        <p data-i18n="service4Desc">Máxima estética y resistencia para restaurar tus dientes.</p>
-      </div>
-      <div class="servicio-item reveal fade-bottom">
-        <h3><i class="fas fa-teeth"></i> <span data-i18n="service5">Ortodoncia Invisible</span></h3>
-        <p data-i18n="service5Desc">Alinea tus dientes discretamente con alineadores transparentes.</p>
-      </div>
-      <div class="servicio-item reveal fade-bottom">
-        <h3><i class="fas fa-tooth"></i> <span data-i18n="service6">Restauraciones Estéticas</span></h3>
-        <p data-i18n="service6Desc">Reparamos tus dientes con materiales que imitan el esmalte natural.</p>
-      </div>
-      <div class="servicio-item reveal fade-bottom">
-        <h3><i class="fas fa-smile"></i> <span data-i18n="service7">Rejuvenecimiento Facial</span></h3>
-        <p data-i18n="service7Desc">Tratamientos combinados para armonizar sonrisa y rostro.</p>
-      </div>
+ <section id="servicios">
+  <h2 class="section-title reveal fade-bottom" data-i18n="servicesTitle">Servicios Premium</h2>
+  <div class="servicios-grid">
+    <div class="servicio-item reveal fade-bottom">
+      <h3><i class="fas fa-sparkles"></i> <span data-i18n="service1">Diseño de Sonrisa Digital</span></h3>
+      <p data-i18n="service1Desc">Visualiza tu nueva sonrisa antes del tratamiento con nuestra tecnología 3D.</p>
     </div>
-  </section>
-
+    <div class="servicio-item reveal fade-bottom">
+      <h3><i class="fas fa-gem"></i> <span data-i18n="service2">Carillas de Porcelana</span></h3>
+      <p data-i18n="service2Desc">La solución más natural y duradera para una sonrisa perfecta.</p>
+    </div>
+    <div class="servicio-item reveal fade-bottom">
+      <h3><i class="fas fa-snowflake"></i> <span data-i18n="service3">Blanqueamiento Profesional</span></h3>
+      <p data-i18n="service3Desc">Resultados inmediatos con nuestro sistema láser de última generación.</p>
+    </div>
+    <div class="servicio-item reveal fade-bottom">
+      <h3><i class="fas fa-crown"></i> <span data-i18n="service4">Coronas de Zirconio</span></h3>
+      <p data-i18n="service4Desc">Máxima estética y resistencia para restaurar tus dientes.</p>
+    </div>
+    <div class="servicio-item reveal fade-bottom">
+      <h3><i class="fas fa-fill-drip"></i> Rellenos Dentales</h3>
+      <p>Tratamientos de resina y materiales estéticos para reparar caries y pequeñas fracturas.</p>
+    </div>
+    <div class="servicio-item reveal fade-bottom">
+      <h3><i class="fas fa-tooth"></i> Endodoncia</h3>
+      <p>Tratamiento de conductos para salvar dientes con infecciones profundas o dolor intenso.</p>
+    </div>
+    <div class="servicio-item reveal fade-bottom">
+      <h3><i class="fas fa-cut"></i> Extracciones</h3>
+      <p>Extracción de piezas dentales dañadas o retenidas con técnicas mínimamente invasivas.</p>
+    </div>
+    <div class="servicio-item reveal fade-bottom">
+      <h3><i class="fas fa-toothbrush"></i> Limpieza Dental</h3>
+      <p>Eliminación profesional de sarro y placa bacteriana para mantener tu salud bucal.</p>
+    </div>
+    <div class="servicio-item reveal fade-bottom">
+      <h3><i class="fas fa-cut"></i> Recorte de Encía</h3>
+      <p>Mejora estética del contorno gingival para una sonrisa más armónica.</p>
+    </div>
+    <div class="servicio-item reveal fade-bottom">
+      <h3><i class="fas fa-screwdriver"></i> Implantes Dentales</h3>
+      <p>Reemplazo de dientes perdidos con raíces artificiales de titanio y coronas personalizadas.</p>
+    </div>
+    <div class="servicio-item reveal fade-bottom">
+      <h3><i class="fas fa-tools"></i> Rehabilitación Completa</h3>
+      <p>Plan integral para restaurar la función y estética de tu boca mediante múltiples tratamientos coordinados.</p>
+    </div>
+  </div>
+</section>
   <!-- Galería -->
   <section id="galeria">
     <h2 class="section-title reveal fade-bottom" data-i18n="galleryTitle">Conocenos</h2>
