--- a/index.html
+++ b/index.html
@@ -906,13 +906,38 @@
         </a>
         <a href="https://www.facebook.com/profile.php?id=61576742612286" target="_blank" class="facebook-btn">
   Página de Facebook
+          <style>
+  .facebook-btn {
+    background: linear-gradient(45deg, #1877f2, #add8e6);
+    color: white;
+    padding: 8px 15px;
+    border-radius: 20px;
+    font-weight: 600;
+    text-decoration: none;
+    font-size: 0.9rem;
+    margin-top: 10px;
+    transition: background 0.3s ease, transform 0.3s ease;
+  }
+
+  .facebook-btn:hover {
+    background: linear-gradient(45deg, #145dbf, #87ceeb);
+    transform: translateY(-2px);
+  }
+
+  @media (min-width: 768px) {
+    .facebook-btn {
+      margin-top: 0;
+      margin-left: 20px;
+    }
+  }
+</style>
 </a>
       </div>
     </div>
   </section>
 
  <section id="servicios">
-  <h2 class="section-title reveal fade-bottom" data-i18n="servicesTitle">Servicios Premium</h2>
+  <h2 class="section-title reveal fade-bottom" data-i18n="servicesTitle">Servicios </h2>
   <div class="servicios-grid">
     <div class="servicio-item reveal fade-bottom">
       <h3><i class="fas fa-sparkles"></i> <span data-i18n="service1">Diseño de Sonrisa Digital</span></h3>
@@ -1050,7 +1075,7 @@
     
     <div class="faq-item reveal fade-bottom">
       <h3 data-i18n="faq2">¿Cuánto duran las carillas de porcelana?</h3>
-      <p data-i18n="faq2Answer">Nuestras carillas premium pueden durar 15 años o más con los cuidados adecuados. Te enseñaremos cómo mantenerlas perfectas.</p>
+      <p data-i18n="faq2Answer">Nuestras carillas pueden durar 15 años o más con los cuidados adecuados. Te enseñaremos cómo mantenerlas perfectas.</p>
     </div>
     
     <div class="faq-item reveal fade-bottom">
@@ -1156,7 +1181,7 @@
         "contactBtn": "Reserva tu consulta",
         "callBtn": "Llamar",
         "callIntlBtn": "Desde EE.UU.",
-        "servicesTitle": "Servicios Premium",
+        "servicesTitle": "Servicios ",
         "service1": "Diseño de Sonrisa Digital",
         "service1Desc": "Visualiza tu nueva sonrisa antes del tratamiento con nuestra tecnología 3D.",
         "service2": "Carillas de Porcelana",
@@ -1204,7 +1229,7 @@
         "faq1": "¿Qué diferencia tiene su diseño de sonrisa digital?",
         "faq1Answer": "Usamos tecnología 3D para mostrarte exactamente cómo quedará tu sonrisa después del tratamiento, permitiéndote participar activamente en el diseño.",
         "faq2": "¿Cuánto duran las carillas de porcelana?",
-        "faq2Answer": "Nuestras carillas premium pueden durar 15 años o más con los cuidados adecuados. Te enseñaremos cómo mantenerlas perfectas.",
+        "faq2Answer": "Nuestras carillas  pueden durar 15 años o más con los cuidados adecuados. Te enseñaremos cómo mantenerlas perfectas.",
         "faq3": "¿El blanqueamiento dental daña los dientes?",
         "faq3Answer": "Nuestro sistema láser controlado es seguro y no daña el esmalte. Usamos geles remineralizantes para proteger tus dientes.",
         "faq4": "¿Duele colocar carillas dentales?",
@@ -1223,7 +1248,7 @@
         "contactBtn": "Book your consultation",
         "callBtn": "Call",
         "callIntlBtn": "From U.S.",
-        "servicesTitle": "Premium Services",
+        "servicesTitle": " Services",
         "service1": "Digital Smile Design",
         "service1Desc": "Visualize your new smile before treatment with our 3D technology.",
         "service2": "Porcelain Veneers",
@@ -1271,7 +1296,7 @@
         "faq1": "What makes your digital smile design different?",
         "faq1Answer": "We use 3D technology to show you exactly how your smile will look after treatment, allowing you to actively participate in the design.",
         "faq2": "How long do porcelain veneers last?",
-        "faq2Answer": "Our premium veneers can last 15 years or more with proper care. We'll teach you how to keep them perfect.",
+        "faq2Answer": "Our  veneers can last 15 years or more with proper care. We'll teach you how to keep them perfect.",
         "faq3": "Does teeth whitening damage teeth?",
         "faq3Answer": "Our controlled laser system is safe and does not damage enamel. We use remineralizing gels to protect your teeth.",
         "faq4": "Does placing dental veneers hurt?",
