--- a/index.html
+++ b/index.html
@@ -873,17 +873,13 @@
       <button class="close-popup" id="closePopup">&times;</button>
       <img src="Oferta.png" alt="Promoción Exclusiva - Diseño de Sonrisa 30% OFF" class="popup-img">
     </div>
+    <a href="https://www.facebook.com/profile.php?id=61576742612286" target="_blank" class="facebook-btn">
+    Página de Facebook
+  </a>
   </div>
-
-  <header class="header" id="mainHeader">
-    <img src="logo.png" alt="Erick Robles Odontologia integral" class="logo">
-    <div class="direccion-header">
-      <i class="fas fa-map-marker-alt"></i> Av. Plutarco Elías Calles 315, Cd. Juárez
-    </div>
   </header>
-  <a href="https://www.facebook.com/profile.php?id=61576742612286" target="_blank" class="facebook-btn">
-  Página de Facebook
-          <style>
+
+<style>
   .facebook-btn {
     background: linear-gradient(45deg, #1877f2, #add8e6);
     color: white;
@@ -908,7 +904,14 @@
     }
   }
 </style>
-</a>
+
+  <header class="header" id="mainHeader">
+    <img src="logo.png" alt="Erick Robles Odontologia integral" class="logo">
+    <div class="direccion-header">
+      <i class="fas fa-map-marker-alt"></i> Av. Plutarco Elías Calles 315, Cd. Juárez
+    </div>
+  </header>
+ 
   <section class="hero">
     <div class="hero-content">
       <h1 data-i18n="heroTitle">Excelencia en Odontología Estética</h1>
