--- a/index.html
+++ b/index.html
@@ -1190,7 +1190,7 @@
     const translations = {
       es: {
         "title": "Erick Robles Odontologia Integral | Excelencia en Odontología Estética",
-        "heroTitle": "Excelencia en Odontología Estética",
+        "heroTitle": "Clinica Dental Con la mejor atencion odontologica, con todas las especialidades dentales",
         "heroText": "Transformamos sonrisas con técnicas avanzadas y un enfoque personalizado en Juárez.",
         "contactBtn": "Reserva tu consulta",
         "callBtn": "Llamar",
