--- a/index.html
+++ b/index.html
@@ -913,7 +913,7 @@
  
   <section class="hero">
     <div class="hero-content">
-      <h1 data-i18n="heroTitle">Clinica Dental Con la mejor atencion odontologica, con todas las especialidades dentales</h1>
+      <h1 data-i18n="heroTitle">Clinica Dental Con la mejor atencion odontologica</h1>
       <p data-i18n="heroText">Transformamos sonrisas con técnicas avanzadas y un enfoque personalizado en Ciudad Juárez Chihuahua.</p>
       
       <a href="#contacto" class="btn-contacto">
@@ -1190,7 +1190,7 @@
     const translations = {
       es: {
         "title": "Erick Robles Odontologia Integral | Excelencia en Odontología Estética",
-        "heroTitle": "Clinica Dental Con la mejor atencion odontologica, con todas las especialidades dentales",
+        "heroTitle": "Clinica Dental Con la mejor atencion odontologica",
         "heroText": "Transformamos sonrisas con técnicas avanzadas y un enfoque personalizado en Juárez.",
         "contactBtn": "Reserva tu consulta",
         "callBtn": "Llamar",
