--- a/index.html
+++ b/index.html
@@ -914,7 +914,7 @@
   <section class="hero">
     <div class="hero-content">
       <h1 data-i18n="heroTitle">Clinica Dental Con la mejor atencion odontologica</h1>
-      <p data-i18n="heroText">Transformamos sonrisas con técnicas avanzadas y un enfoque personalizado en Ciudad Juárez Chihuahua.</p>
+      <p data-i18n="heroText">Transformamos sonrisas con técnicas avanzadas y un enfoque personalizado en Ciudad Juárez Chihuahua, agenda tu cita hoy para tener una bella sonrisa!.</p>
       
       <a href="#contacto" class="btn-contacto">
         <i class="fas fa-calendar-check"></i> <span data-i18n="contactBtn">Reserva tu consulta</span>
@@ -1191,7 +1191,7 @@
       es: {
         "title": "Erick Robles Odontologia Integral | Excelencia en Odontología Estética",
         "heroTitle": "Clinica Dental Con la mejor atencion odontologica",
-        "heroText": "Transformamos sonrisas con técnicas avanzadas y un enfoque personalizado en Juárez.",
+        "heroText": "Transformamos sonrisas con técnicas avanzadas y un enfoque personalizado en Ciudad Juárez Chihuahua, agenda tu cita hoy para tener una bella sonrisa!.",
         "contactBtn": "Reserva tu consulta",
         "callBtn": "Llamar",
         "callIntlBtn": "Desde EE.UU.",
