--- a/index.html
+++ b/index.html
@@ -110,27 +110,39 @@
     /* Header */
   
   }
-  .facebook-btn {
-    background: linear-gradient(45deg, #1877f2, #add8e6);
-    color: white;
-    padding: 10px 20px;
-    border-radius: 20px;
-    font-weight: 600;
-    text-decoration: none;
-    font-size: 0.95rem;
-    display: inline-flex;
-    align-items: center;
-    gap: 8px;
-    transition: background 0.3s ease, transform 0.3s ease;
-  }
+ .facebook-btn {
+  background: linear-gradient(45deg, #1877f2, #add8e6);
+  color: white;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+  position: fixed;
+  bottom: 90px; /* Ajusta esta posición según necesites */
+  right: 20px;
+  z-index: 100;
+  text-decoration: none;
+}
 
-  .facebook-btn:hover {
-    background: linear-gradient(45deg, #145dbf, #87ceeb);
-    transform: translateY(-2px);
-  }
+.facebook-btn i {
+  font-size: 24px;
+  margin: 0; /* Elimina el margen derecho que tenía antes */
+}
 
-  .facebook-btn i {
-    font-size: 1rem;
+.facebook-btn span {
+  display: none; /* Oculta el texto "Página de Facebook" */
+}
+
+/* Opcional: efecto hover */
+.facebook-btn:hover {
+  background: linear-gradient(45deg, #145dbf, #87ceeb);
+  transform: scale(1.1);
+}
   }
     .header {
       background-color: var(--color-negro);
@@ -938,8 +950,8 @@
         
           <!-- Parte derecha: botón de Facebook -->
   <div class="header-right">
-    <a href="https://www.facebook.com/profile.php?id=61576742612286" target="_blank" class="facebook-btn">
-      <i class="fab fa-facebook-f"></i> Página de Facebook
+   <a href="https://www.facebook.com/profile.php?id=61576742612286" target="_blank" class="facebook-btn" title="Página de Facebook">
+  <i class="fab fa-facebook-f"></i>
     </a>
   </div>
 </header>
