--- a/index.html
+++ b/index.html
@@ -108,10 +108,9 @@
     }
 
     /* Header */
-  
-  }
- .facebook-btn {
-  background: linear-gradient(45deg, #1877f2, #add8e6);
+/* Botón Facebook circular */
+.facebook-btn {
+  background: #1877f2;
   color: white;
   width: 50px;
   height: 50px;
@@ -119,28 +118,21 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  cursor: pointer;
-  transition: all 0.3s ease;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.15);
   position: fixed;
-  bottom: 90px; /* Ajusta esta posición según necesites */
+  bottom: 80px;
   right: 20px;
   z-index: 100;
-  text-decoration: none;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+  transition: all 0.3s ease;
+  border: 2px solid white;
 }
 
 .facebook-btn i {
   font-size: 24px;
-  margin: 0; /* Elimina el margen derecho que tenía antes */
 }
 
-.facebook-btn span {
-  display: none; /* Oculta el texto "Página de Facebook" */
-}
-
-/* Opcional: efecto hover */
 .facebook-btn:hover {
-  background: linear-gradient(45deg, #145dbf, #87ceeb);
+  background: #145dbf;
   transform: scale(1.1);
 }
   }
@@ -950,9 +942,9 @@
         
           <!-- Parte derecha: botón de Facebook -->
   <div class="header-right">
-   <a href="https://www.facebook.com/profile.php?id=61576742612286" target="_blank" class="facebook-btn" title="Página de Facebook">
+  <a href="https://www.facebook.com/profile.php?id=61576742612286" target="_blank" class="facebook-btn" title="Visita nuestra página de Facebook">
   <i class="fab fa-facebook-f"></i>
-    </a>
+</a>
   </div>
 </header>
 
