--- a/index.html
+++ b/index.html
@@ -110,23 +110,23 @@
     /* Header */
 /* Botón Facebook circular */
 .facebook-btn {
-  background: #1877f2;
-  color: white;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: fixed;
-  bottom: 80px;
-  right: 20px;
-  z-index: 100;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-  transition: all 0.3s ease;
-  border: 2px solid white;
+    background: #1877f2;
+    color: white;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    bottom: 80px; /* Ajusta este valor para moverlo más abajo */
+    right: 20px;
+    z-index: 100;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+    transition: all 0.3s ease;
+    border: 2px solid white;
 }
-
+    
 .facebook-btn i {
   font-size: 24px;
 }
