--- a/index.html
+++ b/index.html
@@ -135,51 +135,51 @@ facebook-btn {
     box-shadow: 0 6px 16px rgba(0,0,0,0.3);
 }
   }
-    .header {
-      background-color: var(--color-negro);
-      padding: 15px 5%;
-      position: fixed;
-      width: 100%;
-      top: 0;
-      z-index: 1000;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      box-shadow: var(--sombra);
-      transition: all 0.3s ease;
-      border-bottom: 2px solid var(--color-dorado);
-    }
+     /* Header simplificado */
+  .header {
+    background-color: var(--color-negro);
+    padding: 10px 5%;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 1000;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.3);
+    border-bottom: 1px solid var(--color-dorado);
+  }
 
-    .header.scrolled {
-      padding: 10px 5%;
-      background-color: rgba(18, 18, 18, 0.98);
-      backdrop-filter: blur(5px);
-    }
+  .header.scrolled {
+    padding: 8px 5%;
+  }
 
-    .logo {
-      height: 80px;
-      width: auto;
-      max-width: 280px;
-      margin-bottom: 10px;
-      transition: all 0.3s ease;
-    }
+  .logo {
+    height: 50px;
+    width: auto;
+    max-width: 200px;
+    transition: all 0.3s ease;
+  }
 
-    .header.scrolled .logo {
-      height: 60px;
-      margin-bottom: 5px;
-    }
+  .header.scrolled .logo {
+    height: 40px;
+  }
 
-    .direccion-header {
-      color: var(--dorado-claro);
-      font-size: 0.9rem;
-      text-align: center;
-      transition: all 0.3s ease;
-      font-weight: 500;
-    }
+  .direccion-header {
+    color: var(--dorado-claro);
+    font-size: 0.8rem;
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+  }
 
-    .header.scrolled .direccion-header {
-      font-size: 0.8rem;
-    }
+  .direccion-header i {
+    margin-right: 5px;
+  }
+
+  .header.scrolled .direccion-header {
+    font-size: 0.7rem;
+  }
 
     /* Hero */
     .hero {
