--- a/index.html
+++ b/index.html
@@ -947,7 +947,7 @@
 
   <section class="hero">
     <div class="hero-content">
-      <h1 data-i18n="heroTitle">Clinica Dental Con la mejor atencion odontologica</h1>
+      <h1 data-i18n="heroTitle">Clinica Dental Con la mejor Experiencia</h1>
       <p data-i18n="heroText">Transformamos sonrisas con técnicas avanzadas y un enfoque personalizado en Ciudad Juárez Chihuahua, agenda tu cita hoy para tener una bella sonrisa!.</p>
       
       <a href="#contacto" class="btn-contacto">
@@ -1213,7 +1213,7 @@
     const translations = {
       es: {
         "title": "Dr. Erick Robles | Odontología Estética Integral",
-        "heroTitle": "Clinica Dental Con la mejor atencion odontologica",
+        "heroTitle": "Clinica Dental Con la mejor Experiencia",
         "heroText": "Transformamos sonrisas con técnicas avanzadas y un enfoque personalizado en Ciudad Juárez Chihuahua, agenda tu cita hoy para tener una bella sonrisa!.",
         "contactBtn": "Reserva tu consulta",
         "callBtn": "Llamar",
