--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       --whatsapp: #25D366;
       --facebook: #1877f2;
       --instagram: #E1306C;
+      --whatsapp: #25D366;
     }
 
     * {
@@ -145,6 +146,32 @@
   transform: translateY(-2px);
   box-shadow: 0 6px 16px rgba(0,0,0,0.3);
   opacity: 0.9;
+}
+    /* Botón WhatsApp Header */
+.whatsapp-btn-header {
+  background-color: var(--whatsapp);
+  color: white;
+  padding: 12px 20px;
+  border-radius: 30px;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  font-weight: 600;
+  transition: all 0.3s ease;
+  box-shadow: var(--sombra);
+  border: 2px solid var(--whatsapp);
+  font-size: 0.9rem;
+}
+
+.whatsapp-btn-header i {
+  font-size: 18px;
+  margin-right: 8px;
+}
+
+.whatsapp-btn-header:hover {
+  background-color: #128C7E;
+  transform: translateY(-2px);
+  box-shadow: 0 6px 16px rgba(0,0,0,0.3);
 }
     /* Popup Promoción */
     .popup-overlay {
@@ -961,6 +988,9 @@
         <i class="fab fa-facebook-f"></i> Facebook
       </a>
 
+       <a href="https://wa.me/526147801653" target="_blank" class="whatsapp-btn-header">
+      <i class="fab fa-whatsapp"></i> WhatsApp
+    </a>
 
          <a href="https://www.instagram.com/dr_robles_odontologia_integral/" target="_blank" class="instagram-btn">
       <i class="fab fa-instagram"></i> Instagram
