--- a/index.html
+++ b/index.html
@@ -1093,6 +1093,8 @@
     <div class="galeria-ads">
       <img src="El3.jpg" alt="Transformación de sonrisa con carillas" class="reveal fade-left">
       <img src="El2.jpg" alt="Clínica de lujo en Juárez" class="reveal fade-right">
+      <img src="El4.jpg" alt="Carillas Dentales" class="reveal fade-right">
+      <img src="El5.jpg" alt="Coronas dentales" class="reveal fade-right">
     </div>
   </section>
 
