--- a/index.html
+++ b/index.html
@@ -1068,6 +1068,7 @@
        <img src="El6.png" alt="Implante dental" class="reveal fade-right">
       <img src="El4.jpg" alt="Carillas Dentales" class="reveal fade-right">
       <img src="El5.jpg" alt="Coronas dentales" class="reveal fade-right">
+      <img src="El8.jpg" alt="Coronas dentales" class="reveal fade-right">
       
     </div>
   </section>
