--- a/index.html
+++ b/index.html
@@ -1068,7 +1068,10 @@
        <img src="El6.png" alt="Implante dental" class="reveal fade-right">
       <img src="El4.jpg" alt="Carillas Dentales" class="reveal fade-right">
       <img src="El5.jpg" alt="Coronas dentales" class="reveal fade-right">
-      <img src="El8.jpg" alt="Coronas dentales" class="reveal fade-right">
+      <img src="El9.jpg" alt="Coronas dentales" class="reveal fade-right">
+      <img src="el10.jpg" alt="Coronas dentales" class="reveal fade-right">
+      <img src="El11.jpg" alt="Coronas dentales" class="reveal fade-right">
+      <img src="El12.jpg" alt="Coronas dentales" class="reveal fade-right">
       
     </div>
   </section>
