--- a/index.html
+++ b/index.html
@@ -953,7 +953,16 @@
   <!-- Header -->
   <header class="header" id="mainHeader">
     <img src="logo.png" alt="Dr. Erick Robles Odontología Estética" class="logo">
+
+
     
+      <div class="header-right">
+      <div class="direccion-header">
+        <i class="fas fa-map-marker-alt"></i> Dr Erick Robles Odontologia Integral
+      </div>
+
+
+        
     <div class="header-right">
       <div class="direccion-header">
         <i class="fas fa-map-marker-alt"></i> Av. Plutarco Elías Calles 315, Cd. Juárez
