--- a/index.html
+++ b/index.html
@@ -957,6 +957,7 @@
 
     
       <div class="header-right">
+        <div class="direccion-header">
         <i class="fas fa-map-marker-alt"></i> Dr Erick Robles Odontologia Integral
       </div>
 
