--- a/index.html
+++ b/index.html
@@ -878,6 +878,24 @@
       opacity: 1;
     }
 
+
+
+
+
+
+    
+    /* Aquí puedes pegar la clase nueva */
+.fondo-negro {
+  background-color: var(--color-negro);
+  color: var(--blanco);
+}
+
+
+
+
+
+    
+
     .reveal.active.fade-bottom {
       animation: fadeInUp 1s ease;
     }
@@ -1088,7 +1106,7 @@
 </section>
 
   <!-- Galería -->
-  <section id="galeria">
+<section id="galeria" class="fondo-negro">
     <h2 class="section-title reveal fade-bottom" data-i18n="galleryTitle">Conocenos</h2>
     <div class="galeria-ads">
       <img src="El7.jpg" alt="Transformación de sonrisa con carillas" class="reveal fade-left">
