--- a/index.html
+++ b/index.html
@@ -276,6 +276,18 @@
       font-weight: 600;
     }
 
+
+
+
+    .fondo-negro h2 {
+  color: var(--blanco) !important;
+}
+
+
+
+
+
+    
     .hero h1 {
       color: var(--color-dorado);
       font-size: 2.5rem;
