--- a/index.html
+++ b/index.html
@@ -88,6 +88,33 @@
       transition: all 0.3s ease;
     }
 
+
+
+
+
+    
+
+    .galeria-ads {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 10px; /* un poco menor, para que estén más juntas */
+  margin-top: 30px;
+}
+
+.galeria-ads img {
+  width: 100%;
+  height: auto;
+  display: block;
+  border: 2px solid var(--blanco); /* borde blanco para que resalten sobre fondo negro */
+  border-radius: 8px;
+  object-fit: cover;
+}
+
+
+
+
+
+    
     .header.scrolled .logo {
       height: 60px;
     }
