--- a/index.html
+++ b/index.html
@@ -306,10 +306,19 @@
 
 
 
-    .fondo-negro h2 {
-  color: var(--blanco) !important;
+
+    .fondo-gris-oscuro {
+  background-color: var(--gris-oscuro) !important;
+  color: var(--blanco);
 }
 
+
+
+    
+
+.fondo-gris-oscuro h2 {
+  color: var(--blanco) !important;
+}
 
 
 
@@ -1150,7 +1159,7 @@
 </section>
 
   <!-- Galería -->
-<section id="galeria" class="fondo-negro">
+<section id="galeria" class="fondo-gris-oscuro">
     <h2 class="section-title reveal fade-bottom" data-i18n="galleryTitle">Conocenos</h2>
     <div class="galeria-ads">
       <img src="El7.jpg" alt="Transformación de sonrisa con carillas" class="reveal fade-left">
