--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 
     /* Hero */
     .hero {
-      background: linear-gradient(rgba(18, 18, 18, 0.9), rgba(18, 18, 18, 0.9)), url('https://images.unsplash.com/photo-1588776814546-1ffcf47267a5?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80') center/cover no-repeat;
+      background: linear-gradient(rgba(18, 18, 18, 0.9), rgba(18, 18, 18, 0.9)), url('El13.jpeg') center/cover no-repeat;
       color: var(--blanco);
       padding: 180px 5% 80px;
       margin-top: 140px;
