--- a/index.html
+++ b/index.html
@@ -1042,7 +1042,7 @@
 
   <!-- Header -->
   <header class="header" id="mainHeader">
-    <img src="logo.png" alt="Dr. Erick Robles Odontología Estética" class="logo">
+    <img src="El14.jpg" alt="Dr. Erick Robles Odontología Estética" class="logo">
 
 
     
