--- a/index.html
+++ b/index.html
@@ -92,6 +92,53 @@
 
 
 
+
+
+
+
+    
+
+    .icon-btn {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  font-size: 22px;
+  color: var(--dorado-claro); /* Dorado claro que tienes ya definido */
+  background-color: var(--color-negro); /* Fondo negro elegante */
+  border: 2px solid var(--color-dorado);
+  margin: 5px;
+  transition: all 0.3s ease;
+  text-decoration: none;
+}
+
+.icon-btn:hover {
+  background-color: var(--color-dorado);
+  color: var(--color-negro);
+}
+
+/* Específico para que el icono tenga su color */
+.facebook-icon i {
+  color: #1877f2; /* Azul Facebook */
+}
+
+.instagram-icon i {
+  color: #E1306C; /* Rosa Instagram */
+}
+
+.whatsapp-icon i {
+  color: #25D366; /* Verde WhatsApp */
+}
+
+
+
+
+
+
+
+
     
 
     .galeria-ads {
