--- a/index.html
+++ b/index.html
@@ -1101,18 +1101,7 @@
       <div class="direccion-header">
         <i class="fas fa-map-marker-alt"></i> Av. Plutarco Elías Calles 315, Cd. Juárez
       </div>
-      
-  <div class="social-icons">
-      <a href="https://www.facebook.com/profile.php?id=61576742612286" target="_blank" class="icon-btn facebook-icon">
-        <i class="fab fa-facebook-f"></i>
-      </a>
-      <a href="https://www.instagram.com/dr_robles_odontologia_integral/" target="_blank" class="icon-btn instagram-icon">
-        <i class="fab fa-instagram"></i>
-      </a>
-      <a href="https://wa.me/526147801653?text=Hola,%20quisiera%20información%20sobre%20sus%20servicios" target="_blank" class="icon-btn whatsapp-icon">
-        <i class="fab fa-whatsapp"></i>
-      </a>
-    </div>
+  
   </div>
 </header>
 
@@ -1129,7 +1118,10 @@
 
 
 
-     <!-- Aquí metes los logos -->
+
+
+
+     <!-- Botones de redes sociales en el hero -->
   <div class="social-icons-hero">
     <a href="https://www.facebook.com/profile.php?id=61576742612286" target="_blank" class="icon-btn facebook-icon">
       <i class="fab fa-facebook-f"></i>
