--- a/index.html
+++ b/index.html
@@ -90,7 +90,16 @@
 
 
 
+.social-icons-hero .icon-btn i {
+  color: inherit; /* Hereda el color del botón padre */
+  transition: all 0.3s ease;
+}
 
+.social-icons-hero .icon-btn:hover i {
+  color: var(--color-negro); /* Color al hacer hover */
+}
+
+    
 
 .social-icons-hero {
   display: flex;
@@ -1113,27 +1122,23 @@
     </div>
   </div>
 
+ 
+  
+  
   <section class="hero">
 
-
-
-
-
-
-
-     <!-- Botones de redes sociales en el hero -->
-  <div class="social-icons-hero">
-    <a href="https://www.facebook.com/profile.php?id=61576742612286" target="_blank" class="icon-btn facebook-icon">
-      <i class="fab fa-facebook-f"></i>
-    </a>
-    <a href="https://www.instagram.com/dr_robles_odontologia_integral/" target="_blank" class="icon-btn instagram-icon">
-      <i class="fab fa-instagram"></i>
-    </a>
-    <a href="https://wa.me/526147801653?text=Hola,%20quisiera%20información%20sobre%20sus%20servicios" target="_blank" class="icon-btn whatsapp-icon">
-      <i class="fab fa-whatsapp"></i>
-    </a>
-  </div>
-
+    
+<div class="social-icons-hero">
+  <a href="https://www.facebook.com/profile.php?id=61576742612286" target="_blank" class="icon-btn">
+    <i class="fab fa-facebook-f"></i>
+  </a>
+  <a href="https://www.instagram.com/dr_robles_odontologia_integral/" target="_blank" class="icon-btn">
+    <i class="fab fa-instagram"></i>
+  </a>
+  <a href="https://wa.me/526147801653?text=Hola,%20quisiera%20información%20sobre%20sus%20servicios" target="_blank" class="icon-btn">
+    <i class="fab fa-whatsapp"></i>
+  </a>
+</div>
 
 
 
