--- a/index.html
+++ b/index.html
@@ -1437,13 +1437,13 @@
 
 
     
-   // Header scroll effect - Hide on scroll down, show on scroll up
-// let lastScroll = 0;
-// const header = document.getElementById('mainHeader');
-// const scrollThreshold = 100; // Cuántos píxeles de scroll antes de ocultar/mostrar
+    Header scroll effect - Hide on scroll down, show on scroll up
+let lastScroll = 0;
+    const header = document.getElementById('mainHeader');
+ const scrollThreshold = 100; // Cuántos píxeles de scroll antes de ocultar/mostrar
 
-//window.addEventListener('scroll', function() {
- // const currentScroll = window.scrollY;
+window.addEventListener('scroll', function() {
+  const currentScroll = window.scrollY;
 
 
 
